--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Welcome to home page!</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non vel earum inventore minima. Itaque autem minus corrupti quia, velit ipsam. Qui harum, explicabo consequatur nam nulla maiores omnis odio sapiente!
-    Quisquam quos quas quasi vero eligendi maiores laborum quis nobis laudantium distinctio suscipit facere, odit reprehenderit deserunt. Illum nam minima accusantium? Omnis repellat iure et vel. Distinctio eaque impedit temporibus?
-    Fugiat, quam maxime at possimus ipsam illo labore! Dolorem aperiam sapiente similique possimus vero modi perspiciatis mollitia culpa at, expedita quidem error repellat veritatis numquam incidunt. Harum ab magnam necessitatibus.
-    Nisi, voluptas. Quam officia cumque porro aperiam mollitia doloribus soluta at tempore molestias dolores reiciendis harum culpa deleniti eius in, aliquam iure, id omnis itaque sit possimus sint unde quas?
-    Numquam aliquam esse eius doloremque adipisci, soluta perferendis officiis. Praesentium saepe architecto nam adipisci ipsum recusandae consectetur molestiae ipsa molestias provident assumenda aperiam dicta excepturi, id eaque odit quam rerum.
-    Asperiores autem voluptate recusandae nam dolores? Repellendus architecto culpa sint dignissimos autem. Dolor repudiandae provident expedita nobis laborum similique hic fugiat, excepturi, vero, itaque voluptatum magnam fugit quos asperiores delectus!
-    Delectus corporis ullam ipsum iusto nam laudantium quam eaque repellat molestias! Cupiditate nemo deserunt laborum consequatur cum? Optio, maxime ducimus veritatis culpa illo a eos quidem velit placeat dolore praesentium.
-    Architecto consequatur culpa, voluptate, voluptatibus, officiis asperiores perferendis quos sed adipisci non quidem molestiae maiores? Animi quibusdam consequuntur quis repellat quam accusantium dolore, ad velit ea alias, repudiandae voluptatem repellendus.
-    Fugit aperiam quisquam vero nihil repudiandae quidem mollitia, fugiat nesciunt cupiditate alias doloremque. Voluptas magnam voluptatem, aliquam hic provident corporis molestias blanditiis similique assumenda? Modi distinctio voluptatem veritatis possimus nobis.
-    Unde quibusdam iusto vero? Nemo ipsa amet repellat provident voluptas, mollitia, deserunt consequuntur sed inventore soluta tempora accusantium veritatis cumque aut, sunt consectetur illo? Qui aut laudantium asperiores quo ipsam?
-    Pariatur minus, expedita reiciendis deleniti fuga sunt fugit eos molestiae harum possimus quis dolore labore fugiat unde sequi, quas animi aut quidem consequatur, officiis eius quasi quia natus! Quam, ducimus.
-    Ipsam rerum officia exercitationem ut, beatae reprehenderit consequuntur veniam laborum perferendis quam dolore vitae. Eaque veritatis sunt, explicabo magnam, natus vel molestiae veniam dolore perferendis saepe cupiditate, aliquid odit hic!
-    Error ullam repudiandae, eaque cum reprehenderit unde expedita ratione animi explicabo ab aliquid, consectetur debitis dolorem dicta molestiae nesciunt adipisci laborum distinctio cumque velit maiores quo deleniti. Quis, alias asperiores.
-    Ex quaerat reiciendis quia aut hic neque commodi veritatis ducimus voluptatem officia? Veritatis minus consequatur eligendi natus dolores amet ipsa, doloremque praesentium earum quo itaque debitis quos quis eum mollitia!
-    Veniam explicabo blanditiis modi natus, perspiciatis magnam accusantium maiores laudantium dolore enim esse, neque illo in doloremque doloribus illum fugiat minima, alias excepturi debitis consequatur recusandae ducimus aliquid! Fugiat, eligendi?
-    Vero ut, accusamus alias commodi quia voluptas, fugiat neque labore eum voluptatibus quisquam eius sint eos? Expedita at facere tempore. Hic tempora veniam laboriosam, fuga voluptatibus laborum beatae temporibus aliquam?
-    Magnam assumenda non totam, quo labore quas enim, eligendi, quasi recusandae temporibus porro vitae dolores rem ipsum vero eius iste tempore quae architecto sapiente! Distinctio fugiat aliquid illum suscipit accusamus.
-    Quam, placeat repellat eaque atque corrupti nesciunt libero esse maiores, doloremque veritatis ipsa quaerat molestias in dignissimos facere vitae aspernatur! Asperiores ex deleniti in sit eaque, quaerat odit rerum nostrum!
-    Ipsam placeat ducimus obcaecati qui deleniti, quae veritatis, laudantium culpa exercitationem voluptatum error sit earum corrupti? Saepe laborum autem dolorum officia aspernatur corporis deserunt nulla consequuntur, placeat animi quasi iure?
-    Tempora neque omnis iure sapiente ducimus ab, facere fugit, vel totam dicta quae eaque! Ducimus odio omnis culpa accusantium. Ad voluptate iusto inventore quod ut nulla sunt expedita deleniti quis.
-    Aspernatur repudiandae ut esse optio? Repudiandae sint ratione magni! Tempore, perspiciatis velit quibusdam iusto dolorem quis corrupti pariatur magni rem dignissimos, aspernatur obcaecati laboriosam unde repellendus ipsa quo ab assumenda.
-    Voluptatum veniam nobis, odit enim dolores exercitationem fugit! Quam dolorem est nihil dolorum magni, itaque alias velit placeat repellendus assumenda nesciunt, fuga excepturi at ipsam expedita tempore accusantium! Temporibus, provident!
-    Esse ipsum mollitia cum dolorem, nostrum illo voluptatem, adipisci fugiat quas asperiores necessitatibus doloremque, recusandae nulla dolores qui aut delectus ipsa totam facilis doloribus provident vero corporis deleniti. Hic, quas.
-    Pariatur velit eum ipsum in nam, quia ad aut incidunt deleniti, facilis porro est qui ab! Expedita distinctio enim rem ut natus! Dignissimos, rem vero possimus incidunt pariatur corporis totam.
-    Quae temporibus omnis hic soluta suscipit repudiandae aspernatur dolore libero reprehenderit ipsa ullam consectetur recusandae, dicta ipsam, culpa repellendus dolorum asperiores, magni natus eaque neque nihil totam quibusdam fuga. Libero.</p>
+    <div class="container-fluid mt-3">
+        <h2>Row Cols</h2>
+        <p>The .row-cols-* classes are used to set the number of columns that should appear next to each other.</p>
+        
+        <div class="row row-cols-lg-1">
+          <div class="col-lg-6 bg-success"><img src="https://www.dummyimage.com/600x200/eee/fff" alt=""></div>
+          <div class="col-lg-6 bg-warning"><img src="https://www.dummyimage.com/600x200/eee/fff" alt=""></div>
+        </div>
+        <br>
+        <div class="row row-cols-2">
+          <div class="col bg-success">1 of 4</div>
+          <div class="col bg-warning">2 of 4</div>
+          <div class="col bg-success">3 of 4</div>
+          <div class="col bg-warning">4 of 4</div>
+        </div>
+        <br>
+        <div class="row row-cols-3">
+          <div class="col bg-success">1 of 6</div>
+          <div class="col bg-warning">2 of 6</div>
+          <div class="col bg-success">3 of 6</div>
+          <div class="col bg-warning">4 of 6</div>
+          <div class="col bg-success">5 of 6</div>
+          <div class="col bg-warning">6 of 6</div>
+        </div>
+      </div>
 </body>
 </html>
+
+<script src="/assets/bootstrap/js/jquery3.6.js"></script>
+<script src="/assets/bootstrap/js/popper.min.js"></script>
+<script src="/assets/bootstrap/js/bootstrap.bundle.js"></script>
