--- a/index.html
+++ b/index.html
@@ -10,39 +10,39 @@
 <body>
     <nav class="navbar navbar-expand-sm bg-nav">        
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand text-white" href="#">PPI</a>
             <ul class="navbar-nav" >
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 1</a>
+                    <a class="nav-link text-white" href="#">Link 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 2</a>
+                    <a class="nav-link text-white" href="#">Link 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 3</a>
+                    <a class="nav-link text-white" href="#">Link 3</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-info" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                    <a class="nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown">Dropdown</a>
                     <ul class="dropdown-menu" id="dropdown">
-                        <li><a class="dropdown-item text-info" href="#">Link</a></li>
-                        <li><a class="dropdown-item text-info" href="#">Another link</a></li>
-                        <li><a class="dropdown-item text-info" href="#">A third link</a></li>
+                        <li><a class="dropdown-item text-secondary" href="#">Link</a></li>
+                        <li><a class="dropdown-item text-secondary" href="#">Another link</a></li>
+                        <li><a class="dropdown-item text-secondary" href="#">A third link</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 5</a>
+                    <a class="nav-link text-white" href="#">Link 5</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 6</a>
+                    <a class="nav-link text-white" href="#">Link 6</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 7</a>
+                    <a class="nav-link text-white" href="#">Link 7</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 8</a>
+                    <a class="nav-link text-white" href="#">Link 8</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 9</a>
+                    <a class="nav-link text-white" href="#">Link 9</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-info" href="#">Link 10</a>
