--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a class="nav-link text-white" href="#">Link 9</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-info" href="#">Link 10</a>
+                    <a class="nav-link text-white" href="#">Link 10</a>
                 </li>
             </ul>
         </div>
