--- a/index.html
+++ b/index.html
@@ -8,48 +8,97 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-nav">        
+    <!-- Menu this page -->
+    <nav class="navbar navbar-expand-md bg-nav navbar-dark fixed-top">        
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">PPI</a>
-            <ul class="navbar-nav" >
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 2</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 3</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown">Dropdown</a>
-                    <ul class="dropdown-menu" id="dropdown">
-                        <li><a class="dropdown-item text-secondary" href="#">Link</a></li>
-                        <li><a class="dropdown-item text-secondary" href="#">Another link</a></li>
-                        <li><a class="dropdown-item text-secondary" href="#">A third link</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 5</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 6</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 7</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 8</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 9</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 10</a>
-                </li>
-            </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menubar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="menubar">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Link 1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 3</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                        <ul class="dropdown-menu" id="dropdown">
+                            <li><a class="dropdown-item" href="#">Link</a></li>
+                            <li><a class="dropdown-item" href="#">Another link</a></li>
+                            <li><a class="dropdown-item" href="#">A third link</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 5</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 6</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 7</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 8</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 9</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link 10</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
+    
+    <!-- section of menu -->
+    <section id="home">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+            <!-- Indicators/dots -->
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="4"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="5"></button>
+                <button type="button" data-bs-target="#demo" data-bs-slide-to="6"></button>
+            </div>
+        
+            <!-- The slideshow/carousel -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+1" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+2" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+3" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+4" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+5" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+6" alt="" width="100%">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+7" alt="" width="100%">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
