veiw page and feedback to me

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap/css/">
+    <link rel="stylesheet" href="assets/bootstrap/css/font-kh.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <!-- Menu this page -->
     <nav class="navbar navbar-expand-md bg-nav navbar-dark fixed-top">        
         <div class="container-fluid">
@@ -17,14 +20,14 @@
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="menubar">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Link 1</a>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#home">Link 1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
+                        <a class="nav-link" href="#grade">Link 2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 3</a>
+                        <a class="nav-link" href="#contace">Link 3</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Dropdown</a>
@@ -76,25 +79,262 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+1" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+1" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+2" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+2" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+3" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+3" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+4" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+4" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+5" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+5" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+6" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+6" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.dummyimage.com/600x285/000/fff&text=study+7" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+7" alt="" width="100%">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="grade">
+        <div class="bg-marquee">
+            <marquee behavior="scroll" scrolldelay="80" onmouseover="this.stop();" onmouseout="this.start();">
+                <p>វិទ្យាស្ថានពហុបច្ចេកទេសព្រះកុសុមៈ (PPI) មានទីតាំងតែមួយគត់ ការិយាល័យទទួលពាក្យតែមួយកន្លែងគត់ មិនមាននៅកន្លែងផ្សេងទេ ដូច្នេះមុនពេលប្អូនៗទទួលពាក្យចុះឈ្មោះចូលរៀនសូមពិនិត្យពាក្យនោះឱ្យបានច្បាស់លាស់ថា វិទ្យាស្ថានពហុបច្ចេកទេសព្រះកុសុមៈឬមិនមែន។ ទីតាំងស្ថិតនៅតាមបណ្តោយមហាវិថីសហព័ន្ធរុស្សី ច្រកចូលខាងកើតក្រុមហ៊ុន Metfone និងវត្តទឹកថ្លា ចម្ងាយ 180ម៉ែត្រ ។ ចាប់ផ្តើមទទួលពាក្យថ្នាក់អាហារូបករណ៍ (100%) និងថ្នាក់សិក្សាបង់ថ្លៃ 1. វិស្វកម្មអគ្គិសនី 2. វិស្វកម្មសំណង់ស៊ីវិល 3. វិស្វកម្មអេឡិចត្រូនិក 4. បច្ចេកវិទ្យាព័ត៌មាន 5. គណនេយ្យនិងហិរញ្ញវត្ថុ 6. គ្រប់គ្រង 7. ម៉ាឃិតធីង ទំនាក់ទនងលេខ៖ 016528800, 011760000, 012515584, 012707544, 017355283, 015206056, 086477746, 098696005, 081413151 ។</p>   
+            </marquee>
+        </div>
+        <div class="container-fluid">
+            <div class="section-title text-center">
+                <h3 class="sub-header">មហាវិទ្យាល័យ</h3>
+                <p class="header">ជ្រើសរើសវិទ្យាល័យតាមជំនាញ់ណាមួយ</p>
+            </div>
+            <div class="row p-0 m-0">
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">អគ្គីសនី</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើការតភ្ជាប់ប្រព័ន្ធបណ្តាញ់ អគ្គីសនី</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0 align-text-bottom">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-1">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">សំណង់ស៊ីវិល</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើប្លង់ការសាងសង់សំណង់អគារ</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">អេឡិចត្រូនិច</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើប្រព័ន្ធអេឡិចត្រូនិចនឹងជុសជុល</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">បច្ចេកវិទ្យាព័ត៌មាន</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើបច្ចេកវិឡាព័ត៌មានការសរសេរ code and internet</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">គ្រប់គ្រង</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើអំពី​របៀបគ្រប់​គ្រង​ដឹកនាំ​អាជីវកម្មអ្វីមួយ</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">ម៉ាឃិតធីង</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើទីផ្សាការរៀបចំផលិតកម្មឫផលិតផលណាមួយ</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header p-0 m-0">
+                            <img src="https://www.dummyimage.com/600x400/000/fff&text=height" width="100%" class="p-0">
+                        </div>
+                        <div class="card-body m-0 p-2 text-center">
+                            <p class="p-0 m-0"><span class="sub">គណនេយ្យនិងហិរញ្ញវត្ថុ</span></p>
+                            <div class="m-1 link-sub">
+                                <p class="text-center">សិក្សាទៅលើគ្រប់គ្រងផ្នែកហិរញ្ញវត្ថុនឹងធនាគារ</p>
+                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="contace" style="padding-top: 3rem;">
+        <div class="container-fluid">
+            <div class="section-title text-center">
+                <h3 class="sub-header">អំពីសាលា PPI</h3>
+                <p class="header">ព័ត៌មានបន្ថែម</p>
+            </div>
+            <div class="row m-0 p-0 ">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header text-center m-1 p-2">
+                            <p class="sub p-0 m-0"><i class="fa-regular fa-clock"></i> ម៉ោងសិក្សា</p>
+                        </div>
+                        <div class="card-body m-0 pt-2 p-1">
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span>វេនព្រឹក ៖ ម៉ោង ៧ : ០០ ដល់ ១២ : ០០</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span>វេនរសៀល ៖ ម៉ោង ១ : ៣០ ដល់ ៥ : ០០</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span>វេនយប់ ៖ ម៉ោង ៥ : ៣០ ដល់ ៨ : ៣០</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span>វេនថ្ងៃសៅរ៍-អាទិត្យ ៖ សិក្សាពេលព្រឹក និងថ្ងៃ</span>
+                            </p>
+                        </div>
+                        <div class="card-footer m-0 p-1">
+                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header text-center m-1 p-2">
+                            <p class="sub p-0 m-0"><i class="fa-regular fa-bell"></i> ដំណឹង និងព្រឹត្តិការណ៍ថ្មីៗ</p>
+                        </div>
+                        <div class="card-body m-0 pt-2 p-1">
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> ការចុះកម្មសិក្សារបស់និស្សិត មហាវិទ្យាល័យសំណង់ស៊ីវិល</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> ព័ត៌មានអំពីការសិក្សា</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> សេចក្តីជូនដំណឹង​! ផ្តល់អាហារូបករណ៍​ 100%</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> កិច្ចប្រជុំស្តីពីកិច្ចការរបស់វិទ្យាស្ថាន​</span>
+                            </p>
+                        </div>
+                        <div class="card-footer m-0 p-1">
+                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                    <div class="card h-100">
+                        <div class="card-header text-center m-1 p-2">
+                            <p class="sub p-0 m-0"><i class="fa-solid fa-location-dot"></i><span> អាសយដ្ឋាន</span></p>
+                        </div>
+                        <div class="card-body m-0 pt-2 p-1">
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> មហាវិថីសហព័ន្ធរុស្ស៊ី ភូមិចុងថ្នល់ ខាងកើត សង្កាត់ទឹកថ្លា ខ័ណ្ឌសែនសុខ រាជធានីភ្នំពេញ</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> លេខទូរស័ព្ទផ្នែកផ្តល់ព័ត៌មាន ៖ ០១២ ៨២៦ ៤០៤ , ០១១ ៧៦០ ០០០ , ០១២ ៦៥៥ ៦៤៤ , ០១៦ ៥២៨ ៨០០</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> Email: ppi@ppiedu.com</span>
+                            </p>
+                            <p class="text-info fs-6">
+                                <i class="fas fa-fast-forward"></i>
+                                <span> Website: www.ppiedu.com</span>
+                            </p>
+                        </div>
+                        <div class="card-footer m-0 p-1">
+                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
