--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/">
     <link rel="stylesheet" href="assets/bootstrap/css/font-kh.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
     <!-- Menu this page -->
-    <nav class="navbar navbar-expand-md bg-nav navbar-dark fixed-top">        
+    <nav class="navbar navbar-expand-md bg-nav navbar-dark fixed-top" id="head-bar">        
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">PPI</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menubar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class="navbar-toggler border-0 text-center" data-bs-toggle="collapse" data-bs-target="#menubar">
+                <i class="fas fa-bars" id="menu-bars"></i>
+            </div>
             <div class="collapse navbar-collapse justify-content-center" id="menubar">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
@@ -61,7 +60,7 @@
     </nav>
     
     <!-- section of menu -->
-    <section id="home">
+    <div id="home">
         <!-- Carousel -->
         <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -79,7 +78,7 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+1" alt="" width="100%">
+                    <img src="https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://www.dummyimage.com/600x290/000/fff&text=study+2" alt="" width="100%">
@@ -101,8 +100,9 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section id="grade">
+    </div>
+
+    <div id="grade">
         <div class="bg-marquee">
             <marquee behavior="scroll" scrolldelay="80" onmouseover="this.stop();" onmouseout="this.start();">
                 <p>វិទ្យាស្ថានពហុបច្ចេកទេសព្រះកុសុមៈ (PPI) មានទីតាំងតែមួយគត់ ការិយាល័យទទួលពាក្យតែមួយកន្លែងគត់ មិនមាននៅកន្លែងផ្សេងទេ ដូច្នេះមុនពេលប្អូនៗទទួលពាក្យចុះឈ្មោះចូលរៀនសូមពិនិត្យពាក្យនោះឱ្យបានច្បាស់លាស់ថា វិទ្យាស្ថានពហុបច្ចេកទេសព្រះកុសុមៈឬមិនមែន។ ទីតាំងស្ថិតនៅតាមបណ្តោយមហាវិថីសហព័ន្ធរុស្សី ច្រកចូលខាងកើតក្រុមហ៊ុន Metfone និងវត្តទឹកថ្លា ចម្ងាយ 180ម៉ែត្រ ។ ចាប់ផ្តើមទទួលពាក្យថ្នាក់អាហារូបករណ៍ (100%) និងថ្នាក់សិក្សាបង់ថ្លៃ 1. វិស្វកម្មអគ្គិសនី 2. វិស្វកម្មសំណង់ស៊ីវិល 3. វិស្វកម្មអេឡិចត្រូនិក 4. បច្ចេកវិទ្យាព័ត៌មាន 5. គណនេយ្យនិងហិរញ្ញវត្ថុ 6. គ្រប់គ្រង 7. ម៉ាឃិតធីង ទំនាក់ទនងលេខ៖ 016528800, 011760000, 012515584, 012707544, 017355283, 015206056, 086477746, 098696005, 081413151 ។</p>   
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-1">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
@@ -231,26 +231,27 @@
                             <p class="p-0 m-0"><span class="sub">គណនេយ្យនិងហិរញ្ញវត្ថុ</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើគ្រប់គ្រងផ្នែកហិរញ្ញវត្ថុនឹងធនាគារ</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
+                                <p class="text-start m-0">តម្លៃសិក្សា</p>
                                 <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
-                            <a class="btn text-info m-0 p-0">មើលច្រើនទៀត</a>
+                            <a class="btn text-info m-0 p-0 form-control">មើលច្រើនទៀត</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <section id="contace" style="padding-top: 3rem;">
+    </div>
+
+    <div id="contace" style="padding-top: 3rem;">
         <div class="container-fluid">
             <div class="section-title text-center">
                 <h3 class="sub-header">អំពីសាលា PPI</h3>
                 <p class="header">ព័ត៌មានបន្ថែម</p>
             </div>
             <div class="row m-0 p-0 ">
-                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12 p-1 m-0">
                     <div class="card h-100">
                         <div class="card-header text-center m-1 p-2">
                             <p class="sub p-0 m-0"><i class="fa-regular fa-clock"></i> ម៉ោងសិក្សា</p>
@@ -274,12 +275,12 @@
                             </p>
                         </div>
                         <div class="card-footer m-0 p-1">
-                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                            <button class="btn btn-primary w-100">ចុចមើលបន្ថែម</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12 p-1 m-0">
                     <div class="card h-100">
                         <div class="card-header text-center m-1 p-2">
                             <p class="sub p-0 m-0"><i class="fa-regular fa-bell"></i> ដំណឹង និងព្រឹត្តិការណ៍ថ្មីៗ</p>
@@ -303,12 +304,12 @@
                             </p>
                         </div>
                         <div class="card-footer m-0 p-1">
-                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                            <button class="btn btn-primary w-100">ចុចមើលបន្ថែម</button>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-4 col-sm-6 col-6 p-1 m-0">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-12 p-1 m-0">
                     <div class="card h-100">
                         <div class="card-header text-center m-1 p-2">
                             <p class="sub p-0 m-0"><i class="fa-solid fa-location-dot"></i><span> អាសយដ្ឋាន</span></p>
@@ -316,31 +317,41 @@
                         <div class="card-body m-0 pt-2 p-1">
                             <p class="text-info fs-6">
                                 <i class="fas fa-fast-forward"></i>
-                                <span> មហាវិថីសហព័ន្ធរុស្ស៊ី ភូមិចុងថ្នល់ ខាងកើត សង្កាត់ទឹកថ្លា ខ័ណ្ឌសែនសុខ រាជធានីភ្នំពេញ</span>
+                                <span class="text-justify"> មហាវិថីសហព័ន្ធរុស្ស៊ី ភូមិចុងថ្នល់ ខាងកើត សង្កាត់ទឹកថ្លា ខ័ណ្ឌសែនសុខ រាជធានីភ្នំពេញ</span>
                             </p>
                             <p class="text-info fs-6">
                                 <i class="fas fa-fast-forward"></i>
-                                <span> លេខទូរស័ព្ទផ្នែកផ្តល់ព័ត៌មាន ៖ ០១២ ៨២៦ ៤០៤ , ០១១ ៧៦០ ០០០ , ០១២ ៦៥៥ ៦៤៤ , ០១៦ ៥២៨ ៨០០</span>
+                                <span class="text-justify"> លេខទូរស័ព្ទផ្នែកផ្តល់ព័ត៌មាន ៖ ០១២ ៨២៦ ៤០៤ , ០១១ ៧៦០ ០០០ , ០១២ ៦៥៥ ៦៤៤ , ០១៦ ៥២៨ ៨០០</span>
                             </p>
                             <p class="text-info fs-6">
                                 <i class="fas fa-fast-forward"></i>
-                                <span> Email: ppi@ppiedu.com</span>
+                                <span class="text-justify"> Email: ppi@ppiedu.com</span>
                             </p>
                             <p class="text-info fs-6">
                                 <i class="fas fa-fast-forward"></i>
-                                <span> Website: www.ppiedu.com</span>
+                                <span class="text-justify"> Website: www.ppiedu.com</span>
                             </p>
                         </div>
                         <div class="card-footer m-0 p-1">
-                            <button class="btn btn-primary">ចុចមើលបន្ថែម</button>
+                            <button class="btn btn-primary w-100">ចុចមើលបន្ថែម</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+
 </body>
 </html>
+<script>
+    let menu = document.querySelector('#menu-bars');
+    let navbar = document.querySelector('.navbar');
+
+    menu.onclick = () =>{
+        menu.classList.toggle('fa-times');
+        navbar.classList.toggle('bg-danger');
+    }
+</script>
 
 <script src="assets/bootstrap/js/jquery3.6.js"></script>
 <script src="assets/bootstrap/js/popper.min.js"></script>
