--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="navbar-brand text-white" href="#">PPI</a>
             <ul class="navbar-nav" >
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 1</a>
+                    <a class="nav-link text-white" href="register.php">Link 1</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#">Link 2</a>
