--- a/index.html
+++ b/index.html
@@ -4,55 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/font-kh.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="stylesheet" href="./assets/css/course_styles.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/font-kh.css">
     <link rel="stylesheet" href="./assets/css/information_styles.css">
+    <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+<body>
     <!-- Menu this page -->
-    <nav class="navbar navbar-expand-md fixed-top" style="background-color: #852d35;">        
-        <div class="container-fluid" style="padding: 0 15px;">
-            <a class="navbar-brand text-white" href="#">PPI</a>
-            <ul class="navbar-nav" >
+    <nav class="nav-theme" id="navbar">        
+        <div class="container-nav">
+            <a class="logo-title" href="#">PPI</a>
+            <ul class="navbar-ul" >
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="register.php">Link 1</a>
+                    <a  href="register.php">Link 1</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 2</a>
+                    <a  href="#">Link 2</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 3</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown">Dropdown</a>
-                    <ul class="dropdown-menu" id="dropdown">
-                        <li><a class="dropdown-item text-secondary" href="#">Link</a></li>
-                        <li><a class="dropdown-item text-secondary" href="#">Another link</a></li>
-                        <li><a class="dropdown-item text-secondary" href="#">A third link</a></li>
-                    </ul>
+                    <a  href="#">Link 3</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 5</a>
+                    <a class="dropdown-btn" onclick="onDropdown()">Dropdown</a>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">Link</a>
+                        <a href="#">Another link</a>
+                        <a href="#">A third link</a>
+                    </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 6</a>
+                    <a  href="#">Link 5</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 7</a>
+                    <a  href="#">Link 6</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 8</a>
+                    <a  href="#">Link 7</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 9</a>
+                    <a  href="#">Link 8</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Link 10</a>
+                    <a  href="#">Link 9</a>
+                </li>
+                <li class="nav-item">
+                    <a  href="#">Link 10</a>
                 </li>
             </ul>
+            <div id="icon">
+                <a href="javascript:void(0);" >
+                    <i class="bi bi-list"></i>
+                </a>
+            </div>
         </div>
     </nav>
     
@@ -256,17 +261,10 @@
         </div>
     </div>
 </body>
-<script>
-    let menu = document.querySelector('#menu-bars');
-    let navbar = document.querySelector('.navbar');
 
-    menu.onclick = () =>{
-        menu.classList.toggle('fa-times');
-        navbar.classList.toggle('bg-danger');
-    }
-</script>
 </html>
 
-<script src="assets/bootstrap/js/jquery3.6.js"></script>
-<script src="assets/bootstrap/js/popper.min.js"></script>
-<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/bootstrap/js/jquery3.6.js"></script>
+<script src="./assets/js/scripts.js"></script>
+<script src="./assets/bootstrap/js/popper.min.js"></script>
+<script src="./assets/bootstrap/js/bootstrap.bundle.min.js"></script>
