--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="https://images.pexels.com/photos/15469650/pexels-photo-15469650/free-photo-of-monochroom-winterlandschap.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="" width="100%">
+                    <img src="https://www.dummyimage.com/600x290/000/fff&text=study+1" alt="" width="100%">
                 </div>
                 <div class="carousel-item">
                     <img src="https://www.dummyimage.com/600x290/000/fff&text=study+2" alt="" width="100%">
@@ -123,8 +123,6 @@
                             <p class="p-0 m-0"><span class="sub">អគ្គីសនី</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើការតភ្ជាប់ប្រព័ន្ធបណ្តាញ់ អគ្គីសនី</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0 align-text-bottom">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -141,8 +139,6 @@
                             <p class="p-0 m-0"><span class="sub">សំណង់ស៊ីវិល</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើប្លង់ការសាងសង់សំណង់អគារ</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -159,8 +155,6 @@
                             <p class="p-0 m-0"><span class="sub">អេឡិចត្រូនិច</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើប្រព័ន្ធអេឡិចត្រូនិចនឹងជុសជុល</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -177,8 +171,6 @@
                             <p class="p-0 m-0"><span class="sub">បច្ចេកវិទ្យាព័ត៌មាន</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើបច្ចេកវិឡាព័ត៌មានការសរសេរ code and internet</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -195,8 +187,6 @@
                             <p class="p-0 m-0"><span class="sub">គ្រប់គ្រង</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើអំពី​របៀបគ្រប់​គ្រង​ដឹកនាំ​អាជីវកម្មអ្វីមួយ</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -213,8 +203,6 @@
                             <p class="p-0 m-0"><span class="sub">ម៉ាឃិតធីង</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើទីផ្សាការរៀបចំផលិតកម្មឫផលិតផលណាមួយ</p>
-                                <p class="text-center m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -231,8 +219,6 @@
                             <p class="p-0 m-0"><span class="sub">គណនេយ្យនិងហិរញ្ញវត្ថុ</span></p>
                             <div class="m-1 link-sub">
                                 <p class="text-center">សិក្សាទៅលើគ្រប់គ្រងផ្នែកហិរញ្ញវត្ថុនឹងធនាគារ</p>
-                                <p class="text-start m-0">តម្លៃសិក្សា</p>
-                                <p class="cource m-0">$100<span class="in-year">/years</span></p>
                             </div>
                         </div>
                         <div class="card-footer">
@@ -246,10 +232,8 @@
 
     <div id="contace" style="padding-top: 3rem;">
         <div class="container-fluid">
-            <div class="section-title text-center">
-                <h3 class="sub-header">អំពីសាលា PPI</h3>
-                <p class="header">ព័ត៌មានបន្ថែម</p>
-            </div>
+            <h3 class="sub-header">អំពីសាលា PPI</h3>
+            <p class="header">ព័ត៌មានបន្ថែម</p>
             <div class="row m-0 p-0 ">
                 <div class="col-lg-4 col-md-4 col-sm-6 col-12 p-1 m-0">
                     <div class="card h-100">
