--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <h4><span class="sec-text text1"></span></h4>
+                    <h4><span class="sec_text text1"></span></h4>
                 </div>
             </div>
             <div class="course-items">
@@ -111,7 +111,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec-text text2"></span>
+                    <span class="sec_text text2"></span>
                 </div>
             </div>
             <div class="course-items">
@@ -119,7 +119,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec-text text3"></span>
+                    <span class="sec_text text3"></span>
                 </div>
             </div>
             <div class="course-items">
@@ -127,7 +127,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec-text text4"></span>
+                    <span class="sec_text text4"></span>
                 </div>
             </div>
 
@@ -238,8 +238,8 @@
     </div>
 </body>
 </html>
-<script src="./assets/js/script.js"></script>
+<!-- typed js -->
+<script src="./assets/js/typed.umd.js"></script>
+<script src="./assets/js/scripts.js"></script>
 <script src="./assets/js/slides-img-scripts.js"></script>
 
-<!-- typed js -->
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
