--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="./assets/css/themes.css">
-    <link rel="stylesheet" href="./assets/css/course_styles.css">
+    <link rel="stylesheet" href="./assets/css/theme.css">
+    <link rel="stylesheet" href="./assets/css/course_style.css">
     <link rel="stylesheet" href="./assets/bootstrap/css/font-kh.css">
     <link rel="stylesheet" href="./assets/css/information_styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -103,7 +103,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <h4><span class="sec_text text1"></span></h4>
+                    <h4>មហាវិទ្យាល័យអគ្គិសនី : <span class="sec_text text1"></span></h4>
                 </div>
             </div>
             <div class="course-items">
@@ -111,7 +111,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec_text text2"></span>
+                   <h4>មហាវិទ្យាល័យអគ្គិសនី : <span class="sec_text text2"></span></h4> 
                 </div>
             </div>
             <div class="course-items">
@@ -119,7 +119,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec_text text3"></span>
+                    <h4>មហាវិទ្យាល័យអគ្គិសនី : <span class="sec_text text3"></span></h4>
                 </div>
             </div>
             <div class="course-items">
@@ -127,7 +127,7 @@
                     <img src="https://preview.colorlib.com/theme/unica/img/course/1.jpg" alt="course">
                 </div>
                 <div class="course-info">
-                    <span class="sec_text text4"></span>
+                    <h4>មហាវិទ្យាល័យអគ្គិសនី : <span class="sec_text text4"></span></h4>
                 </div>
             </div>
 
@@ -240,6 +240,6 @@
 </html>
 <!-- typed js -->
 <script src="./assets/js/typed.umd.js"></script>
-<script src="./assets/js/scripts.js"></script>
+<script src="./assets/js/script.js"></script>
 <script src="./assets/js/slides-img-scripts.js"></script>
 
