--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/theme.css">
     <link rel="stylesheet" href="./assets/css/course_style.css">
     <link rel="stylesheet" href="./assets/bootstrap/css/font-kh.css">
-    <link rel="stylesheet" href="./assets/css/information_styles.css">
+    <link rel="stylesheet" href="./assets/css/information_style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -240,6 +240,6 @@
 </html>
 <!-- typed js -->
 <script src="./assets/js/typed.umd.js"></script>
-<script src="./assets/js/script.js"></script>
+<script src="./assets/js/scripts.js"></script>
 <script src="./assets/js/slides-img-scripts.js"></script>
 
